app/src/parser/coreth/snapshots/rslib__parser__coreth__native__tests__tx_eth_ui@eip2930_simple_transfer.json.snap
---
source: app/src/parser/coreth/native.rs
expression: reduced
input_file: app/src/parser/coreth/eth_testvectors/eip2930_simple_transfer.json
---
[
    "Transfer": "LUX 0.081985529216486895",
    "To": "0xcccccccccccccccccccccccccccccccccccccccc",
    "Fee(GWEI)": "9.64",
]
